--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <!-- шапка 2 -->
             <section>
               <h1>Ефективні рішення для вашого бізнесу</h1> 
+              <h2>jjjjjj</h2>
               <button type="button">Замовити послугу</button>
             </section>
     
